--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:24.2.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:support-v4:24.2.0'
 }
